tests/typing/bad/testfile-equal1-1.scala
class A { def m() { var b: Int = true == true } }
object Main { def main(args: Array[String]) { } }
